2007-12-12  Ales Hakl  <ales at hakl dot net>

	* src/ports.c (dfsch__port_native_register): reading from ports

	* dfsch/magic.h (DFSCH_UNWIND): initialize dfsch___caught

2007-12-11  Ales Hakl  <ales at hakl dot net>

	* dfsch/ports.h: added declarations

	* src/ports.c: null-port and display and write

	* src/dfsch.c: use saprintf()

	* src/control.c: rewritten all special forms as true special forms

	* src/types.h (form_t): added hook for compiler

2007-12-10  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: renamed dfsch_throw to dfsch_error

	* src/wrapper.c (dfsch_make_wrapper_type): support hash method in
	wrapper types

	* src/dfsch.c: removed scheme-like call/ec (idea is to replace it
	with CL-style catch/throw)

	* scm/test.scm ("control flow"): call/ec really seems badly broken.

	* src/control.c (dfsch__control_register): destructuring-bind not
	destrucutring-bind :)

	* src/repl.c (main): rename version -> *dfsch-version*

	* src/control.c (native_form_destructuring_bind): destructuring-bind

	* configure.ac: set default load:*path* correctly 

2007-12-10  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_new_frame_from_hash): function for constructing
	environments from pre-existing hash tables (for with-foo forms)
	(dfsch_destructure): split lamda_extend to user-accessible function

	* src/object.c (native_form_with_slots): with-slots special form

	* src/hash.c (native_form_with_hash): with-hash special form

2007-12-09  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): renamed argv to *posix-argv*

	* src/ports.c: current-input/output-port

2007-12-08  Ales Hakl  <ales at hakl dot net>

	* src/number.c (n_hash): better hashing

2007-12-06  Ales Hakl  <ales at hakl dot net>

	* src/hash.c: use new hash method

	* dfsch/dfsch.h: hash method in type descriptor

2007-12-05  Ales Hakl  <ales at hakl dot net>

	* dfsch/strings.h (DFSCH_STRING_ARG_OPT): fix optional string 
	arguments

	* src/hash.c (hash_string): fix infinite loop
